@@ -1,3 +1,7 @@
+2019. 8. 9. Renamed zMShape3DReadZTK and zMShape3DPrintFile to zMShape3DScanZTK and zMShape3DPrintZTK, respectively. [zeo_mshape]
+2019. 8. 9. Modified API of zShape3DFromZTK. [zeo_shape, zeo_mshape]
+2019. 8. 9. Added zShape3DArrayFind. [zeo_shape]
+2019. 8. 9. Added zOpticalInfoArrayFind. [zeo_optic]
 2019. 8. 8. Debugged _zShape3DFScan. [zeo_shape]
 2019. 7.28. Reflected renaming of zNameDestroy to zNameFree. [zeo_optic, zeo_shape, zeo_map]
 2019. 7.26. Added prototypes of zVec6DFromZTK, zMat3DFromZTK, zFrame3DFromZTK and zFrame3DDHFromZTK. [zeo_vec6d, zeo_mat3d, zeo_frame]
